# PROG521OK

./: Makefile.am  Makefile.in  elf_header.c  elf_header.h  elf_hexdump.c  elf_hexdump.h  elf_reimplantation.c  elf_reimplantation.h  elf_reltab.c  elf_reltab.h  elf_sections.c  elf_sections.h  elf_symtab.c  elf_symtab.h  file_handmade.txt  file_original.txt  gestionErr.c  gestionErr.h  main  mainPrint.c  mainReloc.c  my_fonctions.c  my_fonctions.h  sample_run.sh  test.sh  testreloc.sh
.deps/: main.Po
Examples_loader/autom4te.cache/: requests
autom4te.cache/: requests
test_logs/: Slog.txt  ex_S.txt  ex_x.txt  xlog.txt  z_S.txt  z_x.txt
